src/test/deca/context/valid/op_exact_cmp_bool.deca
// Description :
// test d'égalité avec des booléens
//
// Résultats :
// ok

{
  boolean b;
  b = true == false;
  b = true != false;
}
